update lamda func